--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -1,1 +1,31 @@
-{}
+{
+	"name": "محمد کارگر",
+	"jobTitle": "برنامه نویس و توسعه دهنده فرانت اند",
+	"jobDescription": "من محمد کارگر هستم، توسعه‌دهنده فرانت‌اند و علاقه‌مند به طراحی و توسعه رابط‌های کاربری تعاملی و کاربرپسند. هدف من ایجاد تجربه‌هایی است که کاربران از کار با آن‌ها لذت ببرند و نیازهای آن‌ها را به بهترین شکل ممکن برآورده کنند.",
+	"resumeLink": "رزومه لینک",
+	"mySkills": "مهارت های من",
+	"experience": "تجربه کاری و تحصیلات",
+	"project": "پروژه ها",
+	"designedVia": "طراحی شده با",
+	"copyRight": "کپی رایت ",
+	"viewMore": "مشاهده بیشتر",
+	"socialMedia": "شبکه های اجتماعی",
+	"switchLanguage": "تغییر به انگلیسی",
+	"projects": {
+		"webline": {
+			"description": "تمام وقت",
+			"place": "آژانس وبلاین",
+			"title": "Frontend Developer"
+		},
+		"saadat": {
+			"description": "ریاضی و فیزیک",
+			"place": "دبیرستان سعادت بوشهر",
+			"title": "دیپلم"
+		},
+		"uni": {
+			"description": "مهندسی کامپیوتر",
+			"place": "دانشگاه آزاد اسلامی بوشهر",
+			"title": "کارشناسی"
+		}
+	}
+}
