Fix resume link translation in fa.json

--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -2,7 +2,7 @@
 	"name": "محمد کارگر",
 	"jobTitle": "برنامه نویس و توسعه دهنده فرانت اند",
 	"jobDescription": "من محمد کارگر هستم، توسعه‌دهنده فرانت‌اند و علاقه‌مند به طراحی و توسعه رابط‌های کاربری تعاملی و کاربرپسند. هدف من ایجاد تجربه‌هایی است که کاربران از کار با آن‌ها لذت ببرند و نیازهای آن‌ها را به بهترین شکل ممکن برآورده کنند.",
-	"resumeLink": "رزومه لینک",
+	"resumeLink": "لینک رزومه",
 	"mySkills": "مهارت های من",
 	"experience": "تجربه کاری و تحصیلات",
 	"project": "پروژه ها",
